--- a/projects/P04-eCommerce Application/starter_code/src/main/resources/application.properties
+++ b/projects/P04-eCommerce Application/starter_code/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+server.port=9090
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
